# personal-blog-python

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  flake.nix
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4465af7d39ef_create_articles_table.py
backend/app/: main.py
backend/app/database/: db.py
backend/app/models/: article.py
backend/app/repositories/: article.py
backend/app/routers/: articles.py  auth.py
backend/app/schemas/: articles.py
backend/app/services/: articles.py
backend/src/app/: main.py
backend/src/app/database/: __init__.py
backend/src/app/models/: article.py
backend/src/app/routers/: auth.py
backend/src/app/schemas/: articles.py
backend/src/app/services/: articles.py
frontend/: .dockerignore  .env.vite  Dockerfile  package-lock.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: articles.ts
frontend/src/components/: ArticleLink.css  ArticleLink.tsx
frontend/src/contexts/: AuthContext.ts  AuthProvider.tsx  useApi.ts
frontend/src/pages/: Article.css  ArticlePage.tsx  Home.css  HomePage.tsx  NotFoundPage.tsx
frontend/src/pages/admin/: DashboardPage.tsx  EditArticlePage.tsx  NewArticlePage.tsx
frontend/src/routes/: AdminRoute.tsx
frontend/src/types/: articles.ts  props.ts
frontend/src/utils/: formatDate.ts
k8s/: backend.yaml  frontend.yaml  migrate.yaml  namespace.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres.yaml
(+13 files in other folders)
