[project]
name = "personal-blog-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.0",
    "jose>=1.0.0",
    "psycopg2-binary>=2.9.12",
    "pyfast[standard]>=4.17.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
]
