[project]
name = "personal-blog-python"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.5",
  "dotenv>=0.9.9",
  "fastapi[standard]>=0.139.0",
  "psycopg2-binary>=2.9.12",
  "python-jose[cryptography]>=3.5.0",
  "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
namespace = false
